unpackaged/main/default/objects/SFDC_Candidate_Reference__c/SFDC_Candidate_Reference__c.object-meta.xml
<CustomObject>
    <description>Candidate References</description>
    <label>Candidate Reference</label>
    <nameField>
        <displayFormat>Reference-{0000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>