unpackaged/main/default/objects/SFDC_Candidate_Reference__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>SFDC_Candidate__c</referenceTo>
    <relationshipLabel>Candidate References</relationshipLabel>
    <relationshipName>Candidate_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>