unpackaged/main/default/objects/SFDC_Candidate_Reference__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <formula>Candidate__r.Name</formula>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>