unpackaged/main/default/objects/SFDC_Candidate_Reference__c/fields/Candidate_Position__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Position__c</fullName>
    <formula>Candidate__r.Position__c</formula>
    <label>Candidate Position</label>
    <type>Text</type>
</CustomField>