unpackaged/main/default/objects/SFDC_Candidate_Reference__c/fields/Candidate_Review__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Review__c</fullName>
    <inlineHelpText>reviews submitted by the references</inlineHelpText>
    <label>Candidate Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>